feat: prisma class gen
